Karen: fixed styling of searchbox on mobile

--- a/web/wp-content/themes/accredit/src/assets/scss/modules/_search.scss
+++ b/web/wp-content/themes/accredit/src/assets/scss/modules/_search.scss
@@ -3,6 +3,7 @@
   .search {
     margin-top: 2rem;
   }
+
   .input-group {
     margin-bottom: 0;
     @include breakpoint(small only) {
@@ -18,30 +19,34 @@
     }
   }
 
+  .searchform {
+    // border: 0;
+    font-size: .75rem;
+    @include breakpoint(small only) {
+      width: 100%;
+      height: 2.5rem;
+      font-size: 1rem;
+
+    }
+  }
 
   .input-group-field {
     padding: .35rem .75rem;
+    max-width: 100%;
+    @include breakpoint(small only) {
+      display: inline-block;
+      width: calc(100% - 3rem);
+    }
   }
 
-  // .input-group-button {
-  //   background: $white;
-  // }
-
-  input {
-    border: 0;
-    font-size: .75rem;
-    @include breakpoint(small only) {
-      min-width: 80%;
-      height: 2.5rem;
-      font-size: 1rem;
-    }
-
-
-    &.button {
-      background-color: $white;
-      border: none;
-      color: $black;
-      border-radius: 0 !important;
+  .input-group-button {
+    display: inline-block;
+    background-color: $white;
+    border: none;
+    color: $black;
+    border-radius: 0 !important;
+  @include breakpoint(small only) {
+      width: 3rem;
     }
   }
 }
