--- a/web/wp-content/themes/accredit/src/assets/scss/templates/_front.scss
+++ b/web/wp-content/themes/accredit/src/assets/scss/templates/_front.scss
@@ -3,10 +3,10 @@
   position: relative;
   height: 100%;
 
-   @include breakpoint(small) {
-    background-attachment: scroll;
-    background-position: center center;
-    background-size: cover;
+   @include breakpoint(small only) {
+    // background-attachment: scroll;
+    background-position: center top;
+    background-size: 100%;
     min-height: 100px;
   }
 
@@ -133,10 +133,10 @@
 
     @include breakpoint(small) {
       width: 100%;
-      margin-bottom: .5rem;
+      margin-bottom: 1rem;
     }
     @include breakpoint(medium) {
-      width: 48%;
+     width: 48%;
      float:left;
     }
 
